added year and changed info text size

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 		<div class="title-text" id="box2">
 			<p id="work-name"></p>
 			<p id="artist-name"></p>
+			<p id="year-name"></p>
 		</div>
 		<div class="info-text" id="box3" style="overflow-y:scroll;">
 			<p id="info"></p>
