Selfhosted Gill Sans Font

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <script type="text/javascript" src="branch_testcode.js"></script>
 <head>
+	<title>Churchill College Exhibition</title>
 	<script src="papaparse.min.js"></script>
 	<meta charset="UTF-8">
 	<meta name="viewport"
