mobile device check

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<div class="homeboxfake hidden" id="hbf"></div>
 		<div class="homebox hidden" id="hb">
 			<div class="hometitle" id="htitle">
-				<p class="exhibitionname">CHURCHILL COLLEGE</p>
+				<p class="exhibitionname" id="exhibitionname">CHURCHILL COLLEGE</p>
 				<p class="exdescription"> Click on any image to enter the exhibition </p>
 			</div>		
 		</div>
