--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<div class="homebox hidden" id="hb">
 			<div class="hometitle" id="htitle">
 				<p class="exhibitionname" id="exhibitionname">CHURCHILL COLLEGE</p>
-				<p class="exdescription"> Click on any image to enter the exhibition </p>
+				<p class="exdescription" id="exdescription"> Click on any image to enter the exhibition </p>
 			</div>		
 		</div>
 		<img class="home1 hidden" id="h1" src="./Images/t8.png" onclick="beginexhibition(this)">
