disable click during transition

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <script type="text/javascript" src="branch_testcode.js"></script>
 <head>
-	<title>Churchill College Exhibition</title>
+	<title>Churchill College: Exhibition</title>
 	<script src="papaparse.min.js"></script>
 	<meta charset="UTF-8">
 	<meta name="viewport"
@@ -18,7 +18,7 @@
 		<div class="homeboxfake hidden" id="hbf"></div>
 		<div class="homebox hidden" id="hb">
 			<div class="hometitle" id="htitle">
-				<p class="exhibitionname" id="exhibitionname">CHURCHILL COLLEGE</p>
+				<p class="exhibitionname" id="exhibitionname">CHURCHILL COLLEGE - THE EXHIBITION</p>
 				<p class="exdescription" id="exdescription"> Click on any image to enter the exhibition </p>
 			</div>		
 		</div>
