--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@
 		<div class="sidetext3" id="sidetext3">
 			test
 		</div>
+
+		<input id="gohome" type="button" value="Go home" onclick="gohome();" />
 		
 		<img class="main-filler" id="f0" src="">
 		<img class="back-filler" id="f1" src="">
@@ -90,7 +92,6 @@
 	<script>
 		window.addEventListener("load", function() {
 		  loadhome();
-		  console.log("loadhome");
 		});
 	</script>
 	
