--- a/index.html
+++ b/index.html
@@ -75,6 +75,8 @@
 		</div>
 
 		<input id="gohome" type="button" value="Go home" onclick="gohome();" />
+		<input id="all entries" type="button" value="All entries" onclick="allentries();" />
+
 		
 		<img class="main-filler" id="f0" src="">
 		<img class="back-filler" id="f1" src="">
@@ -86,6 +88,11 @@
 			<img class="img-bank" id="i0" src="./Images/t0.png">
 	
 		</div>
+
+	</div>
+
+	<div class="all-entries hidden" id="all-entries">
+		<p id="all-entries-title"> ALL ENTRIES </p>
 
 	</div>
 
