changed format of allentries

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
 	<div class="all-entries hidden" id="all-entries">
 		<p id="all-entries-title"> ALL ENTRIES </p>
-
+		<div class="all-entries-container" id="aec"></div>
 	</div>
 
 	<script>
